--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-BOT_TOKEN=6772751398:AAHUCEVfZM-Br1SJL8wETg9Q4UsZgPNNlRQ
+BOT_TOKEN=6772751398:AAHK1UGg49UqPhtDFSzcogIRUTW3Mw7D8kg
 ID_OWNER=1016391777
-DB_NAME=tg_base
-DB_CHAT_NAME=tg_chat
+DB_NAME=tg_chat
 DB_USER=postgres
 DB_PASS=qwerty
 DB_HOST=127.0.0.1
