--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ ID_OWNER=1016391777
 DB_NAME=tg_chat
 DB_USER=postgres
 DB_PASS=qwerty
-DB_HOST=127.0.0.1
+DB_HOST=tg_base
 DB_PORT=5432
 
 DB_NAME_S=railway
