--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ DB_USER=postgres
 DB_PASS=qwerty
 DB_HOST=tg_base
 DB_PORT=5432
+DB_ADAPTER=postgresql+psycopg2
 
 DB_NAME_S=railway
 DB_USER_S=postgres
