--- a/.env
+++ b/.env
@@ -1,14 +1,1 @@
-BOT_TOKEN=6772751398:AAHK1UGg49UqPhtDFSzcogIRUTW3Mw7D8kg
-ID_OWNER=1016391777
-DB_NAME=tg_chat
-DB_USER=postgres
-DB_PASS=qwerty
-DB_HOST=tg_base
-DB_PORT=5432
-DB_ADAPTER=postgresql+psycopg2
-
-DB_NAME_S=railway
-DB_USER_S=postgres
-DB_PASS_S=be*AD1d-eEB5E6G35GC*eF23BEAb5bFf
-DB_HOST_S=viaduct.proxy.rlwy.net
-DB_PORT_S=27919
+Empty file
